update php to 7.4 and requirements to current versions

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
 language: php
 
 php:
-  - 7.2
-  - 7.3
+  - 7.4
 
 sudo: false
 
@@ -11,5 +10,4 @@ before_script:
   - composer install --no-interaction
 
 script:
-  - ./vendor/bin/phpunit.phar --configuration ./phpunit.xml
-  - ./vendor/bin/phpstan.phar analyse -l max ./src
+  - composer quickcheck
