--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "node": ">=0.12.0"
     },
     "dependencies": {
-        "bootstrap": "~3.4.0",
-        "jquery": "^3.3.1"
+        "bootstrap": "^3.4.1",
+        "jquery": "^3.4.1"
     }
 }
